// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render instructions dialog for adding database 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c12 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #2C3A73;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c19 {
  box-sizing: border-box;
}

.c18 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c18 .react-select__control,
.c18 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c18 .react-select__control:hover,
.c18 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c18 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c18 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c18 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c18 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c18 .react-select__menu {
  margin-top: 0px;
}

.c18 .react-select__indicator-separator {
  display: none;
}

.c18 .react-select__loading-indicator {
  display: none;
}

.c18 .react-select--is-disabled .react-select__single-value,
.c18 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c18 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c17 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c17 .react-select__control,
.c17 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c17 .react-select__control:hover,
.c17 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c17 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c17 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c17 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c17 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c17 .react-select__menu {
  margin-top: 0px;
}

.c17 .react-select__indicator-separator {
  display: none;
}

.c17 .react-select__loading-indicator {
  display: none;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c17 .react-select-container {
  background: transparent;
}

.c17 .react-select__option--is-focused:active {
  background-color: #eceff1;
}

.c17 .react-select__value-container {
  padding: 0 8px;
}

.c17 .react-select__single-value {
  color: rgba(255,255,255,0.87);
}

.c17 .react-select__control {
  min-height: 34px;
  height: 34px;
  border-color: rgba(255,255,255,0.24);
  color: rgba(255,255,255,0.56);
}

.c17 .react-select__control:focus,
.c17 .react-select__control:active {
  background-color: #2C3A73;
}

.c17 .react-select__control:hover {
  border-color: rgba(255,255,255,0.24);
  background-color: #2C3A73;
}

.c17 .react-select__control:hover .react-select__dropdown-indicator {
  color: #666;
}

.c17 .react-select__control .react-select__indicator,
.c17 .react-select__control .react-select__dropdown-indicator {
  padding: 4px 8px;
  color: #666;
}

.c17 .react-select__control .react-select__indicator:hover,
.c17 .react-select__control .react-select__dropdown-indicator:hover {
  color: #999;
}

.c17 .react-select__control--menu-is-open {
  background-color: #2C3A73;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  border-color: rgba(255,255,255,0.24);
}

.c17 .react-select__control--menu-is-open .react-select__indicator,
.c17 .react-select__control--menu-is-open .react-select__dropdown-indicator {
  color: #999 !important;
}

.c17 .react-select__control--menu-is-open .react-select__indicator:hover,
.c17 .react-select__control--menu-is-open .react-select__dropdown-indicator:hover {
  color: #ccc !important;
}

.c17 .react-select__input {
  color: rgba(255,255,255,0.87);
}

.c17 .react-select__placeholder {
  color: rgba(255,255,255,0.56);
}

.c17 .react-select__option {
  padding: 4px 12px;
}

.c17 .react-select__menu {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c17 .react-select__multi-value {
  background-color: #111B48;
  border: 1px solid rgba(255,255,255,0.24);
}

.c17 .react-select__multi-value__label {
  color: rgba(255,255,255,0.87);
  padding: 0 6px;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder,
.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.24);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Database
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 1
          </span>
           - Download Teleport to the node which will run Database Access agent 
          <div
            class="c9"
          >
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-darwin-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              MacOS
            </a>
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 64-bit
            </a>
            <a
              class="c11"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-386-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 32-bit
            </a>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 2
          </span>
           - Login to Teleport
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tsh login --proxy=localhost:443 --auth=local --user=yassine
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 3
          </span>
           - Generate a join token
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tctl tokens add --type=db
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 4
          </span>
           - Select the database type and protocol to use
          <div
            class="c16"
          >
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        RDS PostgreSQL
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-12-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 5
          </span>
           - Start the Teleport agent with the following parameters
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                teleport db start --token=mynewtoken --auth-server=localhost:443 --name=[db-name] --protocol=postgres --uri=[uri] --aws-region=[region]
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c9"
        >
          * Note: Learn more about database access in our 
          <a
            class="c11"
            href="https://goteleport.com/docs/database-access/"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
          .
        </div>
      </div>
      <div
        class="c19"
      >
        <button
          class="c20"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render token gen failed message 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c12 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c19 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c19 a {
  color: #FFFFFF;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

.c18 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c18 .react-select__control,
.c18 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c18 .react-select__control:hover,
.c18 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c18 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c18 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c18 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c18 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c18 .react-select__menu {
  margin-top: 0px;
}

.c18 .react-select__indicator-separator {
  display: none;
}

.c18 .react-select__loading-indicator {
  display: none;
}

.c18 .react-select--is-disabled .react-select__single-value,
.c18 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c18 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c17 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c17 .react-select__control,
.c17 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c17 .react-select__control:hover,
.c17 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c17 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c17 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c17 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c17 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c17 .react-select__menu {
  margin-top: 0px;
}

.c17 .react-select__indicator-separator {
  display: none;
}

.c17 .react-select__loading-indicator {
  display: none;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c17 .react-select-container {
  background: transparent;
}

.c17 .react-select__option--is-focused:active {
  background-color: #eceff1;
}

.c17 .react-select__value-container {
  padding: 0 8px;
}

.c17 .react-select__single-value {
  color: rgba(255,255,255,0.87);
}

.c17 .react-select__control {
  min-height: 34px;
  height: 34px;
  border-color: rgba(255,255,255,0.24);
  color: rgba(255,255,255,0.56);
}

.c17 .react-select__control:focus,
.c17 .react-select__control:active {
  background-color: #2C3A73;
}

.c17 .react-select__control:hover {
  border-color: rgba(255,255,255,0.24);
  background-color: #2C3A73;
}

.c17 .react-select__control:hover .react-select__dropdown-indicator {
  color: #666;
}

.c17 .react-select__control .react-select__indicator,
.c17 .react-select__control .react-select__dropdown-indicator {
  padding: 4px 8px;
  color: #666;
}

.c17 .react-select__control .react-select__indicator:hover,
.c17 .react-select__control .react-select__dropdown-indicator:hover {
  color: #999;
}

.c17 .react-select__control--menu-is-open {
  background-color: #2C3A73;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  border-color: rgba(255,255,255,0.24);
}

.c17 .react-select__control--menu-is-open .react-select__indicator,
.c17 .react-select__control--menu-is-open .react-select__dropdown-indicator {
  color: #999 !important;
}

.c17 .react-select__control--menu-is-open .react-select__indicator:hover,
.c17 .react-select__control--menu-is-open .react-select__dropdown-indicator:hover {
  color: #ccc !important;
}

.c17 .react-select__input {
  color: rgba(255,255,255,0.87);
}

.c17 .react-select__placeholder {
  color: rgba(255,255,255,0.56);
}

.c17 .react-select__option {
  padding: 4px 12px;
}

.c17 .react-select__menu {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c17 .react-select__multi-value {
  background-color: #111B48;
  border: 1px solid rgba(255,255,255,0.24);
}

.c17 .react-select__multi-value__label {
  color: rgba(255,255,255,0.87);
  padding: 0 6px;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder,
.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.24);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Database
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 1
          </span>
           - Download Teleport to the node which will run Database Access agent 
          <div
            class="c9"
          >
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-darwin-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              MacOS
            </a>
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 64-bit
            </a>
            <a
              class="c11"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-386-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 32-bit
            </a>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 2
          </span>
           - Login to Teleport
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tsh login --proxy=localhost:443 --auth=local --user=yassine
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 3
          </span>
           - Generate a join token
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tctl tokens add --type=db
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 4
          </span>
           - Select the database type and protocol to use
          <div
            class="c16"
          >
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        RDS PostgreSQL
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-14-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 5
          </span>
           - Start the Teleport agent with the following parameters
          <div
            class="c19"
            kind="danger"
          >
            Error - Failed to generate join token
          </div>
        </div>
        <div
          class="c9"
        >
          * Note: Learn more about database access in our 
          <a
            class="c11"
            href="https://goteleport.com/docs/database-access/"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
          .
        </div>
      </div>
      <div
        class="c20"
      >
        <button
          class="c21"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render token loading message 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c12 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

.c18 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c18 .react-select__control,
.c18 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c18 .react-select__control:hover,
.c18 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c18 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c18 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c18 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c18 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c18 .react-select__menu {
  margin-top: 0px;
}

.c18 .react-select__indicator-separator {
  display: none;
}

.c18 .react-select__loading-indicator {
  display: none;
}

.c18 .react-select--is-disabled .react-select__single-value,
.c18 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c18 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c17 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c17 .react-select__control,
.c17 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c17 .react-select__control:hover,
.c17 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c17 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c17 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c17 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c17 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c17 .react-select__menu {
  margin-top: 0px;
}

.c17 .react-select__indicator-separator {
  display: none;
}

.c17 .react-select__loading-indicator {
  display: none;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c17 .react-select-container {
  background: transparent;
}

.c17 .react-select__option--is-focused:active {
  background-color: #eceff1;
}

.c17 .react-select__value-container {
  padding: 0 8px;
}

.c17 .react-select__single-value {
  color: rgba(255,255,255,0.87);
}

.c17 .react-select__control {
  min-height: 34px;
  height: 34px;
  border-color: rgba(255,255,255,0.24);
  color: rgba(255,255,255,0.56);
}

.c17 .react-select__control:focus,
.c17 .react-select__control:active {
  background-color: #2C3A73;
}

.c17 .react-select__control:hover {
  border-color: rgba(255,255,255,0.24);
  background-color: #2C3A73;
}

.c17 .react-select__control:hover .react-select__dropdown-indicator {
  color: #666;
}

.c17 .react-select__control .react-select__indicator,
.c17 .react-select__control .react-select__dropdown-indicator {
  padding: 4px 8px;
  color: #666;
}

.c17 .react-select__control .react-select__indicator:hover,
.c17 .react-select__control .react-select__dropdown-indicator:hover {
  color: #999;
}

.c17 .react-select__control--menu-is-open {
  background-color: #2C3A73;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  border-color: rgba(255,255,255,0.24);
}

.c17 .react-select__control--menu-is-open .react-select__indicator,
.c17 .react-select__control--menu-is-open .react-select__dropdown-indicator {
  color: #999 !important;
}

.c17 .react-select__control--menu-is-open .react-select__indicator:hover,
.c17 .react-select__control--menu-is-open .react-select__dropdown-indicator:hover {
  color: #ccc !important;
}

.c17 .react-select__input {
  color: rgba(255,255,255,0.87);
}

.c17 .react-select__placeholder {
  color: rgba(255,255,255,0.56);
}

.c17 .react-select__option {
  padding: 4px 12px;
}

.c17 .react-select__menu {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c17 .react-select__multi-value {
  background-color: #111B48;
  border: 1px solid rgba(255,255,255,0.24);
}

.c17 .react-select__multi-value__label {
  color: rgba(255,255,255,0.87);
  padding: 0 6px;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder,
.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.24);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add Database
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 1
          </span>
           - Download Teleport to the node which will run Database Access agent 
          <div
            class="c9"
          >
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-darwin-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              MacOS
            </a>
            <a
              class="c10"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-amd64-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 64-bit
            </a>
            <a
              class="c11"
              href="https://get.gravitational.com/teleport-v6.1.3-linux-386-bin.tar.gz"
              rel="noreferrer"
              target="_blank"
            >
              Linux 32-bit
            </a>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 2
          </span>
           - Login to Teleport
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tsh login --proxy=localhost:443 --auth=local --user=yassine
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 3
          </span>
           - Generate a join token
          <div
            class="c12"
          >
            <div
              class="c13"
              style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
            >
              <div
                class="c14"
              >
                $
              </div>
              <div>
                tctl tokens add --type=db
              </div>
            </div>
            <button
              class="c15"
              kind="primary"
              style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
            >
              Copy
            </button>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 4
          </span>
           - Select the database type and protocol to use
          <div
            class="c16"
          >
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        RDS PostgreSQL
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class="react-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-13-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Step 5
          </span>
           - Start the Teleport agent with the following parameters
          <div
            class="c19"
          >
            Loading command...
          </div>
        </div>
        <div
          class="c9"
        >
          * Note: Learn more about database access in our 
          <a
            class="c11"
            href="https://goteleport.com/docs/database-access/"
            rel="noreferrer"
            target="_blank"
          >
            documentation
          </a>
          .
        </div>
      </div>
      <div
        class="c20"
      >
        <button
          class="c21"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
